--- a/index.html
+++ b/index.html
@@ -4,11 +4,69 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>12bool</title>
 </head>
 <body>
     <main>
-        
+        <div class="container">
+            <h2>Esercizi per casa</h2>
+            <!-- Row 1 -->
+            <div class="row">
+                <div class="col-1">1 Col</div>
+                <div class="col-1">1 Col</div>
+                <div class="col-1">1 Col</div>
+                <div class="col-1">1 Col</div>
+                <div class="col-1">1 Col</div>
+                <div class="col-1">1 Col</div>
+                <div class="col-1">1 Col</div>
+                <div class="col-1">1 Col</div>
+                <div class="col-1">1 Col</div>
+                <div class="col-1">1 Col</div>
+                <div class="col-1">1 Col</div>
+                <div class="col-1">1 Col</div>
+            </div>
+            <!-- Row 2 -->
+            <div class="row">
+                <div class="col-2">col</div>
+                <div class="col-5">col</div>
+                <div class="col-5">col</div>
+            </div>
+            <!-- Row 3 -->
+            <div class="row">
+                <div class="col-12">12 col</div>
+            </div>
+            <!-- Row 4 -->
+            <div class="row">
+                <div class="col-8">8 col</div>
+                <div class="col-2">2 col</div>
+                <div class="col-2">2 col</div>
+            </div>
+            <!-- Row 5 -->
+            <div class="row">
+                <div class="col-1">1 col</div>
+                <div class="col-2">2 col</div>
+                <div class="col-2">2 col</div>
+                <div class="col-6">6 col</div>
+                <div class="col-1">1 col</div>
+            </div>
+            <!-- Row 6 -->
+            <div class="row">
+                <div class="col-6">
+                    <div class="row1">
+                        <div class="nested col-2">Nested 2 col</div>
+                        <div class="nested col-2">Nested 2 col</div>
+                        <div class="nested col-8">Nested 8 col</div>
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="row1">
+                        <div class="nested col-6">Nested 6 col</div>
+                        <div class="nested col-6">Nested 6 col</div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
     
 </body>
