secondo schema e offset

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <main>
         <div class="container">
-            <h2>Esercizi per casa</h2>
+            <h2>Esercizio per casa</h2>
             <!-- Row 1 -->
             <div class="row">
                 <div class="col-1">1 Col</div>
@@ -65,6 +65,71 @@
                         <div class="nested col-6">Nested 6 col</div>
                     </div>
                 </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <!-- Row 7 -->
+            <div class="row">
+                <div class="col-12">g</div>
+            </div>
+            <!-- Row 8 -->
+            <div class="row">
+                <div class="col-1">g</div>
+                <div class="col-11">g</div>
+            </div>
+            <!-- Row 9 -->
+            <div class="row">
+                <div class="col-2">g</div>
+                <div class="col-10">g</div>
+            </div>
+            <!-- Row 10 -->
+            <div class="row">
+                <div class="col-3">g</div>
+                <div class="col-9">g</div>
+            </div>
+            <!-- Row 11 -->
+            <div class="row">
+                <div class="col-4">g</div>
+                <div class="col-8">g</div>
+            </div>
+            <!-- Row 12 -->
+            <div class="row">
+                <div class="col-5">g</div>
+                <div class="col-7">g</div>
+            </div>
+            <!-- Row 13 -->
+            <div class="row">
+                <div class="col-6">g</div>
+                <div class="col-6">g</div>
+            </div>
+        </div>
+
+        <div class="container">
+            <h2>Offset</h2>
+            <div class="row">
+                <div class="col-1 offset1">g</div>
+            </div>
+            <div class="row">
+                <div class="col-2 offset2">g</div>
+            </div><div class="row">
+                <div class="col-3 offset3">g</div>
+            </div><div class="row">
+                <div class="col-4 offset4">g</div>
+            </div><div class="row">
+                <div class="col-5 offset5">g</div>
+            </div><div class="row">
+                <div class="col-6 offset6">g</div>
+            </div><div class="row">
+                <div class="col-7 offset7">g</div>
+            </div><div class="row">
+                <div class="col-8 offset8">g</div>
+            </div><div class="row">
+                <div class="col-9 offset9">g</div>
+            </div><div class="row">
+                <div class="col-10 offset10">g</div>
+            </div><div class="row">
+                <div class="col-11 offset11">g</div>
             </div>
         </div>
     </main>
