Aggiunta file css, fine, modifiche, commenti

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <main>
+
+        <!-- CONTAINER 1 -->
         <div class="container">
             <h2>Esercizio per casa</h2>
             <!-- Row 1 -->
@@ -68,71 +70,93 @@
             </div>
         </div>
 
+        <!-- CONTAINER 2 -->
         <div class="container">
             <!-- Row 7 -->
             <div class="row">
-                <div class="col-12">g</div>
+                <div class="col-12"></div>
             </div>
             <!-- Row 8 -->
             <div class="row">
-                <div class="col-1">g</div>
-                <div class="col-11">g</div>
+                <div class="col-1"></div>
+                <div class="col-11"></div>
             </div>
             <!-- Row 9 -->
             <div class="row">
-                <div class="col-2">g</div>
-                <div class="col-10">g</div>
+                <div class="col-2"></div>
+                <div class="col-10"></div>
             </div>
             <!-- Row 10 -->
             <div class="row">
-                <div class="col-3">g</div>
-                <div class="col-9">g</div>
+                <div class="col-3"></div>
+                <div class="col-9"></div>
             </div>
             <!-- Row 11 -->
             <div class="row">
-                <div class="col-4">g</div>
-                <div class="col-8">g</div>
+                <div class="col-4"></div>
+                <div class="col-8"></div>
             </div>
             <!-- Row 12 -->
             <div class="row">
-                <div class="col-5">g</div>
-                <div class="col-7">g</div>
+                <div class="col-5"></div>
+                <div class="col-7"></div>
             </div>
             <!-- Row 13 -->
             <div class="row">
-                <div class="col-6">g</div>
-                <div class="col-6">g</div>
+                <div class="col-6"></div>
+                <div class="col-6"></div>
             </div>
         </div>
 
+        <!-- CONTAINER OFFSET -->
         <div class="container">
             <h2>Offset</h2>
+            <!-- Row 1 offset -->
             <div class="row">
-                <div class="col-1 offset1">g</div>
+                <div class="col-1 offset1"></div>
             </div>
+            <!-- Row 2 offset -->
             <div class="row">
-                <div class="col-2 offset2">g</div>
-            </div><div class="row">
-                <div class="col-3 offset3">g</div>
-            </div><div class="row">
-                <div class="col-4 offset4">g</div>
-            </div><div class="row">
-                <div class="col-5 offset5">g</div>
-            </div><div class="row">
-                <div class="col-6 offset6">g</div>
-            </div><div class="row">
-                <div class="col-7 offset7">g</div>
-            </div><div class="row">
-                <div class="col-8 offset8">g</div>
-            </div><div class="row">
-                <div class="col-9 offset9">g</div>
-            </div><div class="row">
-                <div class="col-10 offset10">g</div>
-            </div><div class="row">
-                <div class="col-11 offset11">g</div>
+                <div class="col-2 offset2"></div>
+            </div>
+            <!-- Row 3 offset -->
+            <div class="row">
+                <div class="col-3 offset3"></div>
+            </div>
+            <!-- Row 4 offset -->
+            <div class="row">
+                <div class="col-4 offset4"></div>
+            </div>
+            <!-- Row 5 offset -->
+            <div class="row">
+                <div class="col-5 offset5"></div>
+            </div>
+            <!-- Row 6 offset -->
+            <div class="row">
+                <div class="col-6 offset6"></div>
+            </div>
+            <!-- Row 7 offset -->
+            <div class="row">
+                <div class="col-7 offset7"></div>
+            </div>
+            <!-- Row 8 offset -->
+            <div class="row">
+                <div class="col-8 offset8"></div>
+            </div>
+            <!-- Row 9 offset -->
+            <div class="row">
+                <div class="col-9 offset9"></div>
+            </div>
+            <!-- Row 10 offset -->
+            <div class="row">
+                <div class="col-10 offset10"></div>
+            </div>
+            <!-- Row 11 offset -->
+            <div class="row">
+                <div class="col-11 offset11"></div>
             </div>
         </div>
     </main>
-    
+    <!-- END -->
 </body>
 </html>
